--- a/AlimentosSantiagoDesktop/AlimentosSantiagoDesktop.csproj
+++ b/AlimentosSantiagoDesktop/AlimentosSantiagoDesktop.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Entidades\Empresa.cs" />
     <Compile Include="Entidades\Login.cs" />
     <Compile Include="Entidades\Producto.cs" />
+    <Compile Include="Entidades\Proveedor.cs" />
     <Compile Include="Entidades\Usuario.cs" />
     <Compile Include="Formularios\EmpresaEnConvenioManager.cs">
       <SubType>Form</SubType>
